fix: add z-index

--- a/src/scss/components/_c-footer.scss
+++ b/src/scss/components/_c-footer.scss
@@ -4,6 +4,7 @@
         
     }
     &__warning {
+        z-index: 1;
         background: linear-gradient(0deg, rgba(0, 0, 0, 0.20) 0%, rgba(34, 34, 34, 0.00) 91.6%);
     }
     &__warning-text {
